video and small changes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/mac.png">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-     <link rel="stylesheet" type="text/css" href="/main.css">
+     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div class="site">
 	<header>
+		<video autoplay src= "assets/videos/cnc.mp4" muted loop></video>
+		<div class="overlay"></div>
 		<nav></nav>
 		<h1 class="main-h1">Accurate CNC Machining</h1>
 	</header>
@@ -27,51 +29,51 @@
 	</section>
 	<hr>
 <div class="image-back">
-	<div class="image-container container">
+	<div class="image-container container  cont-one">
 		<div class="row">
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/hub2.jpg" alt="" class='img one'>
-				<div class="info-tag"><p>Blank for Gear Shafts</p></div>
+				<img src="assets/images/hub2.jpg" alt="" class='img one'>
+				<div class="info-tag info-one"><p>Blank for Gear Shafts</p></div>
 			</div>
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/hub.jpg" alt="" class='img two'>
-				<div class="info-tag"><p>Hydraulic Cylinders</p></div>
+				<img src="assets/images/hub.jpg" alt="" class='img two'>
+				<div class="info-tag info-one"><p>Hydraulic Cylinders</p></div>
 			</div>
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/gears.jpg" alt="" class='img three'>
-				<div class="info-tag"><p>High Speed Gear Shafts</p></div>
+				<img src="assets/images/gears.jpg" alt="" class='img three'>
+				<div class="info-tag info-one"><p>High Speed Gear Shafts</p></div>
 			</div>
 		</div>
 	</div>
-	<div class="image-container container">
+	<div class="image-container container cont-two">
 		<div class="row">
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/gear2.jpg" alt="" class='img one'>
-				<div class="info-tag"><p>Gears for Large Machine</p></div>
+				<img src="assets/images/gear2.jpg" alt="" class='img one'>
+				<div class="info-tag info-two"><p>Gears for Large Machine</p></div>
 			</div>
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/gear.jpg" alt="" class="img two">
-				<div class="info-tag"><p>Gear for Large Machine</p></div>
+				<img src="assets/images/gear.jpg" alt="" class="img two">
+				<div class="info-tag info-two"><p>Gear for Large Machine</p></div>
 			</div>
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/forgings2.jpg" alt="" class='img three'>
-				<div class="info-tag"><p>Castings for Pump</p></div>
+				<img src="assets/images/forgings2.jpg" alt="" class='img three'>
+				<div class="info-tag info-two"><p>Castings for Pump</p></div>
 			</div>
 		</div>
 	</div>
-	<div class="image-container container">
+	<div class="image-container container cont-three">
 		<div class="row">
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/forgings.jpg" alt="" class='img  one'>
-				<div class="info-tag"><p>Casting for Pump Housing</p></div>
+				<img src="assets/images/forgings.jpg" alt="" class='img  one'>
+				<div class="info-tag info-three"><p>Casting for Pump Housing</p></div>
 			</div>
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/fixutres.jpg" alt="" class='img two'>
-				<div class="info-tag"><p>Fixtured Pump Gears</p></div>
+				<img src="assets/images/fixutres.jpg" alt="" class='img two'>
+				<div class="info-tag info-three"><p>Fixtured Pump Gears</p></div>
 			</div>
 			<div class="image-box col-xs-4">
-				<img src="/assets/images/hub2.jpg" alt="" class='img three'>
-				<div class="info-tag"><p>Blank forGear Shaft</p></div>
+				<img src="assets/images/hub2.jpg" alt="" class='img three'>
+				<div class="info-tag info-three"><p>Blank forGear Shaft</p></div>
 			</div>
 		</div>
 	</div>
@@ -85,25 +87,34 @@
 	</section>
 	</div>
 	<footer> 
-		<div class="container">
+		<div class="container address">
 		<div class="row">
 			<div class="col-xs-2"></div>
-			<div class="col-xs-3"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p></div>
+			<div class="col-xs-3"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p>
+				<div class="map-holder">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.7373639944567!2d-89.01470968447205!3d42.43332493846402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8808a47c0f8e08cb%3A0xe8559319b78c4b52!2s5365+Edith+Ln%2C+Roscoe%2C+IL+61073!5e0!3m2!1sen!2sus!4v1467752309755" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+			</div>
 			<div class="col-xs-3">
 				<h5>Connect With Us</h5>
 				<ul>
-					<li>Facebook</li>
-					<li>Twitter</li>
-					<li>Instagram</li>
+					<li><span class="ion-social-twitter"><p>Twitter</p></span></li>
+					<li><span class="ion-social-facebook">Facebook</span></li>
+					<li><span class="ion-social-linkedin">LinkedIn</span></li>
 				</ul>
+			
 			</div>
 			<div class="col-xs-3">
 			<h3>Contact Us!</h3>
-				<form action="" class="form-inline">
+				<form action="" class="form-group has-danger">
 					<div class="form-group">
-						<label for="">Email:</label>
-						<input type="text" class="form-control" placeholder="Enter your eMail here!">
+						<label for="">Email: </label>
+						<input id="email-input" type="text" class="form-control-sm" placeholder="Enter your eMail here!">
 					</div>
+					<fieldset class="form-group">
+						<label for="exampleTextarea">Text:  </label>
+						<textarea class="form-control" id="exampleTextarea" rows="5"></textarea>
+					</fieldset>
 					<button class="btn btn-primary">SEND</button>
 				</form>
 			</div>
@@ -115,6 +126,6 @@
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<script src="/scripts/app.js"></script>
+	<script src="scripts/app.js"></script>
 </body>
 </html>
