mobile and other additions

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 		<div class="overlay"></div>
 		<nav></nav>
 		<h1 class="main-h1">Accurate CNC Machining</h1>
+		<p>
+			<span class="ion-android-arrow-dropdown-circle"></span></p>
 	</header>
 	<section class="container">
 		<div class="row second">
-		<div class=col-md-1></div>
-			<p class="col-md-10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci.</p>
+			<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci.</p>
 			<p>
 			<span class="ion-android-arrow-dropdown-circle"></span></p>
 		</div>
@@ -81,44 +82,81 @@
 	<hr>
 	<section class="container after-pics">
 		<div class="row">
-		<div class=col-md-2></div>
-			<p class="col-md-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci.</p>
+			<p class="col-md-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci.</p>
 		</div>
 	</section>
-	</div>
-	<footer> 
+	<div class="mobile-footer">
 		<div class="container address">
 		<div class="row">
-			<div class="col-xs-2"></div>
-			<div class="col-xs-3"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p>
+			<div class="col-sm-3 col-xs-6"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p>
 				<div class="map-holder">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.7373639944567!2d-89.01470968447205!3d42.43332493846402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8808a47c0f8e08cb%3A0xe8559319b78c4b52!2s5365+Edith+Ln%2C+Roscoe%2C+IL+61073!5e0!3m2!1sen!2sus!4v1467752309755" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div>
-			<div class="col-xs-3">
+			<div class="col-md-3 col-xs-6 mid">
 				<h5>Connect With Us</h5>
 				<ul>
-					<li><span class="ion-social-twitter"><p>Twitter</p></span></li>
-					<li><span class="ion-social-facebook">Facebook</span></li>
-					<li><span class="ion-social-linkedin">LinkedIn</span></li>
+					<a href="https://twitter.com/accurate_cnc"><li><span class="ion-social-twitter">    Twitter</span></li></a>
+					<a href="https://www.facebook.com/Accurate-CNC-Machining-INC-283188931713695/"><li><span class="ion-social-facebook">   Facebook</span></li></a>
+					<a href="https://www.linkedin.com/company/accurate-cnc-machine"><li><span class="ion-social-linkedin"> 
+					LinkedIn</span></li></a>
 				</ul>
 			
 			</div>
-			<div class="col-xs-3">
+			<div class="col-sm-3 col-xs-12 contact">
 			<h3>Contact Us!</h3>
-				<form action="" class="form-group has-danger">
+				<form action="https://getsimpleform.com/messages?form_api_token=cb6f0abcaa9c9dca6ca6581bf7037db6" method="post" class="form-group has-danger">
 					<div class="form-group">
 						<label for="">Email: </label>
-						<input id="email-input" type="text" class="form-control-sm" placeholder="Enter your eMail here!">
+						<input id="email-input" type="email" name="email" class="form-control-sm" placeholder="Enter your eMail here!">
 					</div>
 					<fieldset class="form-group">
 						<label for="exampleTextarea">Text:  </label>
-						<textarea class="form-control" id="exampleTextarea" rows="5"></textarea>
+						<textarea name="message" class="form-control" id="exampleTextarea" rows="5"></textarea>
 					</fieldset>
-					<button class="btn btn-primary">SEND</button>
+					<button class="btn btn-primary sub">SEND</button>
 				</form>
 			</div>
+		</div>
+		</div>
+	</div>
+	</div>
+	
+	<!--------------------------------->
+	
+	<footer> 
+		<div class="container address">
+		<div class="row">
 			<div class="col-xs-1"></div>
+			<div class="col-sm-4 col-xs-10"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p>
+				<div class="map-holder">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.7373639944567!2d-89.01470968447205!3d42.43332493846402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8808a47c0f8e08cb%3A0xe8559319b78c4b52!2s5365+Edith+Ln%2C+Roscoe%2C+IL+61073!5e0!3m2!1sen!2sus!4v1467752309755" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
+			</div>
+			<div class="col-sm-4 col-xs-10 mid">
+				<h5>Connect With Us</h5>
+				<ul>
+					<a href="https://twitter.com/accurate_cnc"><li><span class="ion-social-twitter">    Twitter</span></li></a>
+					<a href="https://www.facebook.com/Accurate-CNC-Machining-INC-283188931713695/"><li><span class="ion-social-facebook">   Facebook</span></li></a>
+					<a href="https://www.linkedin.com/company/accurate-cnc-machine"><li><span class="ion-social-linkedin"> 
+					LinkedIn</span></li></a>
+				</ul>
+			
+			</div>
+			<div class="col-sm-3 col-xs-10 contact">
+			<h3>Contact Us!</h3>
+				<form action="https://getsimpleform.com/messages?form_api_token=cb6f0abcaa9c9dca6ca6581bf7037db6" method="post" class="form-group has-danger">
+					<div class="form-group">
+						<label for="">Email: </label>
+						<input id="email-input" type="email" name="email" class="form-control-sm" placeholder="Enter your eMail here!">
+					</div>
+					<fieldset class="form-group">
+						<label for="exampleTextarea">Text:  </label>
+						<textarea name="message" class="form-control" id="exampleTextarea" rows="5"></textarea>
+					</fieldset>
+					<button class="btn btn-primary sub">SEND</button>
+				</form>
+			</div>
 		</div>
 		</div>
 		
