--- a/index.html
+++ b/index.html
@@ -7,119 +7,127 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/mac.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/machine.png">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
+<div class="black-box">
+	
+</div>
 	<div class="site">
-	<header>
-		<video autoplay src= "assets/videos/cnc.mp4" muted loop></video>
-		<div class="overlay"></div>
-		<nav></nav>
-		<h1 class="main-h1">Accurate CNC Machining</h1>
-		<p>
-			<span class="ion-android-arrow-dropdown-circle"></span></p>
-	</header>
-	<section class="container">
-		<div class="row second">
-			<p class="col-xs-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci.</p>
+		<header>
+			<video autoplay src= "assets/videos/cnc.mp4" muted loop></video>
+			<div class="overlay"></div>
+			<nav></nav>
+			<h1 class="main-h1">Accurate CNC Machining</h1>
 			<p>
-			<span class="ion-android-arrow-dropdown-circle"></span></p>
-		</div>
-	</section>
-	<hr>
-<div class="image-back">
-	<div class="image-container container  cont-one">
-		<div class="row">
-			<div class="image-box col-xs-4">
-				<img src="assets/images/hub2.jpg" alt="" class='img one'>
-				<div class="info-tag info-one"><p>Blank for Gear Shafts</p></div>
+				<span class="ion-android-arrow-dropdown-circle"></span></p>
+		</header>
+		<section class="container">
+			<div class="row second">
+				<p class="col-xs-12">From prototype to production runs of quality machined parts, Accurate C.N.C. Machining Inc. always strives for perfetion. Acurate C.N.C. Machining Inc. strives to be the best in the machining industry through a determined and knowledgeable team of highly skilled individuals that are dedicated to meet the goals of our company as well as the needs of the customer. We have been ISO 9001-2008 certified since 2009 and have everything in place to assure the customer is receiving high quality products.</p>
+				<p>
+				<span class="ion-android-arrow-dropdown-circle"></span></p>
 			</div>
-			<div class="image-box col-xs-4">
-				<img src="assets/images/hub.jpg" alt="" class='img two'>
-				<div class="info-tag info-one"><p>Hydraulic Cylinders</p></div>
-			</div>
-			<div class="image-box col-xs-4">
-				<img src="assets/images/gears.jpg" alt="" class='img three'>
-				<div class="info-tag info-one"><p>High Speed Gear Shafts</p></div>
-			</div>
-		</div>
-	</div>
-	<div class="image-container container cont-two">
-		<div class="row">
-			<div class="image-box col-xs-4">
-				<img src="assets/images/gear2.jpg" alt="" class='img one'>
-				<div class="info-tag info-two"><p>Gears for Large Machine</p></div>
-			</div>
-			<div class="image-box col-xs-4">
-				<img src="assets/images/gear.jpg" alt="" class="img two">
-				<div class="info-tag info-two"><p>Gear for Large Machine</p></div>
-			</div>
-			<div class="image-box col-xs-4">
-				<img src="assets/images/forgings2.jpg" alt="" class='img three'>
-				<div class="info-tag info-two"><p>Castings for Pump</p></div>
-			</div>
-		</div>
-	</div>
-	<div class="image-container container cont-three">
-		<div class="row">
-			<div class="image-box col-xs-4">
-				<img src="assets/images/forgings.jpg" alt="" class='img  one'>
-				<div class="info-tag info-three"><p>Casting for Pump Housing</p></div>
-			</div>
-			<div class="image-box col-xs-4">
-				<img src="assets/images/fixutres.jpg" alt="" class='img two'>
-				<div class="info-tag info-three"><p>Fixtured Pump Gears</p></div>
-			</div>
-			<div class="image-box col-xs-4">
-				<img src="assets/images/hub2.jpg" alt="" class='img three'>
-				<div class="info-tag info-three"><p>Blank forGear Shaft</p></div>
-			</div>
-		</div>
-	</div>
-	</div>
-	<hr>
-	<section class="container after-pics">
-		<div class="row">
-			<p class="col-md-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto numquam, debitis assumenda dolorem quam quis. Repellendus, sint, porro! Ab atque asperiores inventore voluptate itaque dolores, debitis eum nemo omnis adipisci.</p>
-		</div>
-	</section>
-	<div class="mobile-footer">
-		<div class="container address">
-		<div class="row">
-			<div class="col-sm-3 col-xs-6"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p>
-				<div class="map-holder">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.7373639944567!2d-89.01470968447205!3d42.43332493846402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8808a47c0f8e08cb%3A0xe8559319b78c4b52!2s5365+Edith+Ln%2C+Roscoe%2C+IL+61073!5e0!3m2!1sen!2sus!4v1467752309755" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</section>
+		<hr>
+	<div class="image-back">
+		<div class="image-container container  cont-one">
+			<div class="row">
+				<div class="image-box col-xs-4">
+					<img src="assets/images/hub2.jpg" alt="" class='img one'>
+					<div class="info-tag info-one"><p>Blank for Gear Shafts</p></div>
+				</div>
+				<div class="image-box col-xs-4">
+					<img src="assets/images/hub.jpg" alt="" class='img two'>
+					<div class="info-tag info-one"><p>Hydraulic Cylinders</p></div>
+				</div>
+				<div class="image-box col-xs-4">
+					<img src="assets/images/gears.jpg" alt="" class='img three'>
+					<div class="info-tag info-one"><p>High Speed Gear Shafts</p></div>
 				</div>
 			</div>
-			<div class="col-md-3 col-xs-6 mid">
-				<h5>Connect With Us</h5>
-				<ul>
-					<a href="https://twitter.com/accurate_cnc"><li><span class="ion-social-twitter">    Twitter</span></li></a>
-					<a href="https://www.facebook.com/Accurate-CNC-Machining-INC-283188931713695/"><li><span class="ion-social-facebook">   Facebook</span></li></a>
-					<a href="https://www.linkedin.com/company/accurate-cnc-machine"><li><span class="ion-social-linkedin"> 
-					LinkedIn</span></li></a>
-				</ul>
-			
+		</div>
+		<div class="image-container container cont-two">
+			<div class="row">
+				<div class="image-box col-xs-4">
+					<img src="assets/images/gear2.jpg" alt="" class='img one'>
+					<div class="info-tag info-two"><p>Gears for Large Machine</p></div>
+				</div>
+				<div class="image-box col-xs-4">
+					<img src="assets/images/gear.jpg" alt="" class="img two">
+					<div class="info-tag info-two"><p>Gear for Large Machine</p></div>
+				</div>
+				<div class="image-box col-xs-4">
+					<img src="assets/images/forgings2.jpg" alt="" class='img three'>
+					<div class="info-tag info-two"><p>Castings for Pump</p></div>
+				</div>
 			</div>
-			<div class="col-sm-3 col-xs-12 contact">
-			<h3>Contact Us!</h3>
-				<form action="https://getsimpleform.com/messages?form_api_token=cb6f0abcaa9c9dca6ca6581bf7037db6" method="post" class="form-group has-danger">
-					<div class="form-group">
-						<label for="">Email: </label>
-						<input id="email-input" type="email" name="email" class="form-control-sm" placeholder="Enter your eMail here!">
+		</div>
+		<div class="image-container container cont-three">
+			<div class="row">
+				<div class="image-box col-xs-4">
+					<img src="assets/images/forgings.jpg" alt="" class='img  one'>
+					<div class="info-tag info-three"><p>Casting for Pump Housing</p></div>
+				</div>
+				<div class="image-box col-xs-4">
+					<img src="assets/images/fixutres.jpg" alt="" class='img two'>
+					<div class="info-tag info-three"><p>Fixtured Pump Gears</p></div>
+				</div>
+				<div class="image-box col-xs-4">
+					<img src="assets/images/hub2.jpg" alt="" class='img three'>
+					<div class="info-tag info-three"><p>Blank forGear Shaft</p></div>
+				</div>
+			</div>
+		</div>
+		</div>
+		<hr>
+		<section class="container after-pics">
+			<div class="row">
+				<p class="col-md-12">The products fabricated at Accurate C.N.C. Machining Inc are designed to meet the customers standards in quality and efficency. We make anything from industrial and hydraullic hose connectors to gear blanks. We run anything from a 1-2 piece prototype to large quantity production jobs. 
+			 </p>
+			 <p class="col-md-12">The prices of our products vary according to quantity, size, type of material used, delivery date and shipping. For a free quote, send us a copy of the blueprint and any additional information we will need to meet your expetations.</p>
+			</div>
+		</section>
+		<div class="mobile-footer">
+			<div class="container address">
+			<div class="row">
+				<div class="col-sm-3 col-xs-6"><h5>Accurate CNC Machining</h5><p>5365 Edith Lane</p><p>Roscoe IL, 61072</p>
+					<div class="map-holder">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.7373639944567!2d-89.01470968447205!3d42.43332493846402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8808a47c0f8e08cb%3A0xe8559319b78c4b52!2s5365+Edith+Ln%2C+Roscoe%2C+IL+61073!5e0!3m2!1sen!2sus!4v1467752309755" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
-					<fieldset class="form-group">
-						<label for="exampleTextarea">Text:  </label>
-						<textarea name="message" class="form-control" id="exampleTextarea" rows="5"></textarea>
-					</fieldset>
-					<button class="btn btn-primary sub">SEND</button>
-				</form>
+				</div>
+				<div class="col-md-3 col-xs-6 mid">
+					<h5>Connect With Us</h5>
+					<ul>
+						<a href="https://twitter.com/accurate_cnc"><li><span class="ion-social-twitter">    Twitter</span></li></a>
+						<a href="https://www.facebook.com/Accurate-CNC-Machining-INC-283188931713695/"><li><span class="ion-social-facebook">   Facebook</span></li></a>
+						<a href="https://www.linkedin.com/company/accurate-cnc-machine"><li><span class="ion-social-linkedin"> 
+						LinkedIn</span></li></a>
+					</ul>
+					<span><h3 class="about">About</h3></span>
+				<span><h3 class="machine">Machine List</h3></span>
+				</div>
+				<div class="col-sm-3 col-xs-12 contact">
+				<h3>Contact Us!</h3>
+					<form action="https://getsimpleform.com/messages?form_api_token=cb6f0abcaa9c9dca6ca6581bf7037db6" method="post" class="form-group has-danger">
+					<input type='hidden' name='redirect_to' value='http://pfluegel.github.io/accurate/index.html' />
+						<div class="form-group">
+							<label for="">Email: </label>
+							<input id="email-input" type="email" name="email" class="form-control-sm" placeholder="Enter your eMail here!">
+						</div>
+						<fieldset class="form-group">
+							<label for="exampleTextarea">Text:  </label>
+							<textarea name="message" class="form-control" id="exampleTextarea" rows="5"></textarea>
+						</fieldset>
+						<button class="btn btn-primary sub">SEND</button>
+					</form>
+				</div>
+			</div>
 			</div>
 		</div>
-		</div>
-	</div>
 	</div>
 	
 	<!--------------------------------->
@@ -132,6 +140,8 @@
 				<div class="map-holder">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2944.7373639944567!2d-89.01470968447205!3d42.43332493846402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8808a47c0f8e08cb%3A0xe8559319b78c4b52!2s5365+Edith+Ln%2C+Roscoe%2C+IL+61073!5e0!3m2!1sen!2sus!4v1467752309755" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
+				<span><h3 class="about">About</h3></span>
+				<span><h3 class="machine">Machine List</h3></span>
 			</div>
 			<div class="col-sm-4 col-xs-10 mid">
 				<h5>Connect With Us</h5>
@@ -146,6 +156,7 @@
 			<div class="col-sm-3 col-xs-10 contact">
 			<h3>Contact Us!</h3>
 				<form action="https://getsimpleform.com/messages?form_api_token=cb6f0abcaa9c9dca6ca6581bf7037db6" method="post" class="form-group has-danger">
+				  <input type='hidden' name='redirect_to' value='http://pfluegel.github.io/accurate/index.html' />
 					<div class="form-group">
 						<label for="">Email: </label>
 						<input id="email-input" type="email" name="email" class="form-control-sm" placeholder="Enter your eMail here!">
@@ -154,13 +165,17 @@
 						<label for="exampleTextarea">Text:  </label>
 						<textarea name="message" class="form-control" id="exampleTextarea" rows="5"></textarea>
 					</fieldset>
+					<div class="form-group">
+						<label for="">File upload: </label>
+						<input type="file" name="file" class='form-control'>
+					</div>
 					<button class="btn btn-primary sub">SEND</button>
 				</form>
 			</div>
 		</div>
 		</div>
-		
 	</footer>
+	
 	
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
